Java 9 support hacks